[package]
name = "oxigdal-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxigdal-gpu"
readme = "README.md"
description = "GPU-accelerated geospatial operations for OxiGDAL using WGPU"
keywords = ["gis", "gdal", "gpu", "wgpu", "science"]
categories = ["science", "graphics", "rendering"]

[features]
default = ["auto-backend"]
# Auto-select platform backend
auto-backend = []
# GPU backends
vulkan = ["wgpu/vulkan"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgpu = ["wgpu/webgpu"]
directml = []
cuda = []
# All backends (except WebGPU for native)
all-native-backends = ["vulkan", "metal", "dx12"]
# Backend-specific optimizations
backend-optimizations = ["cuda", "vulkan", "metal", "directml"]
# Multi-GPU support
multi-gpu = []

# Platform-specific defaults
[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { workspace = true }

[dependencies]
# Workspace dependencies
oxigdal-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

# GPU dependencies (latest versions)
wgpu = { workspace = true }
pollster.workspace = true
encase.workspace = true
naga = { workspace = true }

# Math
glam = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }
proptest = { workspace = true }
approx = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "gpu_bench"
harness = false

[lints]
workspace = true
