[package]
name = "oxigdal-ha"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxigdal-ha"
readme = "README.md"
rust-version.workspace = true
keywords = ["gis", "gdal", "high-availability", "disaster-recovery", "failover"]
categories = ["science", "database", "concurrency"]
description = "High availability, disaster recovery, and automatic failover for OxiGDAL"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap.workspace = true
bytes = "1"
oxicode = { version = "0.2", features = ["serde"] }  # COOLJAPAN policy: Use oxicode instead of bincode
crc32fast = "1"
oxiarc-lz4.workspace = true
oxiarc-archive = { workspace = true }
oxiarc-zstd = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
criterion = { workspace = true }
tempfile.workspace = true

[[bench]]
name = "ha_bench"
harness = false

[lib]
path = "src/lib.rs"
