[package]
name = "oxigdal-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure-Rust spatial index (R-tree) for OxiGDAL vector data"
keywords = ["geospatial", "spatial-index", "rtree", "vector"]
categories = ["science::geo", "data-structures"]

[features]
default = ["std"]
std = []

[dependencies]
thiserror.workspace = true

[dev-dependencies]
